# Mini3DEngine

./: .gitignore  BUILD.md  CMakeLists.txt  CMakeUserPresets.json.template
engine/: CMakeLists.txt  engine.c  engine.h  my_math.c  my_math.h
game/: main.c
