cmake_minimum_required(VERSION 3.27)
project(mini_3d_engine VERSION 0.0.1 LANGUAGES C)

# Use C11 standard
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Export compile commands (optional, for editor support)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")

# Include CPM for external libraries
include(cmake/CMakePackageManager.cmake)

# Add engine subdirectory
add_subdirectory(engine)

# Game executable
add_executable(game game/main.c)

# Include engine headers
target_include_directories(game PRIVATE engine)

# Link game with engine and Raylib
target_link_libraries(game PRIVATE engine raylib)